@@ -54,6 +54,7 @@ anjuta.program.arguments=
 preferences.build.option.jobs=0
 preferences.build.option.silent=0
 preferences.build.option.autosave=0
+preferences.anjuta.make.options=-k
 preferences.make=make
 preferences.build.option.keep.going=0
 preferences.build.option.warn.undef=0
